fix util-nav z-index, close the sidebar toggle when clicking on a sidebar link

--- a/app/assets/stylesheets/tenon/z-indexes.css.scss
+++ b/app/assets/stylesheets/tenon/z-indexes.css.scss
@@ -4,7 +4,7 @@ $tn-z-pagination: 2;
 $tn-z-section-header: 997;
 $tn-z-sidebar: 998;
 $tn-z-main-nav: 999;
-$tn-z-util-nav: 999;
+$tn-z-util-nav: 1000;
 $tn-z-content-popped-backdrop: 1020;
 $tn-z-content-popped: 1029;
 $tn-z-tc-sizer: 1029;
